Added perPage param and removed allPages
